tests/e2e/keyword_or_service_argument.error
Error: syntax error in story at line 1, column 20

1|    http fetch url: "" or: "" // Idea is to demonstrate argument `or` is parsed successfully.
                         ^^^^^^

E0141: http action `fetch` does not accept argument `or`.
