tests/e2e/keyword_or_service_argument.story
http fetch url: "" or: "" // Idea is to demonstrate argument `or` is parsed successfully.
